--- a/src/containers/Header/Header.module.css
+++ b/src/containers/Header/Header.module.css
@@ -3,6 +3,17 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 0 -300px; */
-    height: 90vh;
-    background: url('../../assets/images/header_bg.jpg') 0 -300px/cover no-repeat;
+    height: 60vh;
+    /* background: url('../../assets/images/header_bg.jpg') 0 -300px/cover no-repeat; */
+    background: url('../../assets/images/header_mobile.jpg') 50% 0/ cover no-repeat;
+}
+
+.Header-title {
+    color: #991C1E;
+    text-align: center;
+    font-size: 1.8rem;
+}
+
+.Header-title span {
+    color: #F5C662;
 }
