--- a/src/containers/Menu/Menu.module.css
+++ b/src/containers/Menu/Menu.module.css
@@ -1,14 +1,22 @@
 .Menu-container {
     background: url('../../assets/images/menu_bg.jpg') 50% 0 / cover no-repeat;
     height: 50vh;
+    overflow: hidden;
 }
 
-.Menu-container > h2 {
+.Menu-container > h1 {
     color: #F5C662;
     margin: 0;
+    text-align: center;
 }
 
 /* TEMPORÁRIO */
 .Menu-container > p {
     color: #FFF;
 }
+
+
+
+/* .Menu-header {
+    width: 100%;
+} */
