--- a/src/components/MenuComponent/MenuOptionsComponent/MenuOptionsComponent.module.css
+++ b/src/components/MenuComponent/MenuOptionsComponent/MenuOptionsComponent.module.css
@@ -1,7 +1,7 @@
 .Options-container {
     display: flex;
     justify-content: space-between;
-    
+
     transition: 1s ease-in-out;
     -webkit-transition: 1s ease-in-out;
     -moz-transition: 1s ease-in-out;
@@ -12,8 +12,14 @@
 .Options-container > div {
     width: 100%;
     color: #fff;
+    font-weight: bold;
+    font-size: 20px;
 
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.Options-container > div :first-child {
+    margin-top: 0;
 }
