--- a/src/containers/Menu/Menu.module.css
+++ b/src/containers/Menu/Menu.module.css
@@ -7,16 +7,22 @@
 .Menu-container > h1 {
     color: #F5C662;
     margin: 0;
+    padding-top: 10px;
     text-align: center;
 }
+
+.Menu-container > h1:after {
+    content: ""; 
+    display: block;
+    margin: 0 auto; 
+    width: 15%;
+    padding-top: 5px;
+    border-bottom: 1px solid #F5C662; 
+}
+
 
 /* TEMPORÁRIO */
 .Menu-container > p {
     color: #FFF;
 }
 
-
-
-/* .Menu-header {
-    width: 100%;
-} */
