--- a/src/components/UI/SliderMarkerComponent/SliderMarkerComponent.module.css
+++ b/src/components/UI/SliderMarkerComponent/SliderMarkerComponent.module.css
@@ -12,7 +12,7 @@
 .SliderMarkers-marker {
     width: 10px;
     height: 10px;
-    background-color: #fff;
+    /* background-color: #fff; */
 
     border-radius: 50%;
     -webkit-border-radius: 50%;
