mobile e min 480px - FINALIZADOS; min 768px - FALTANDO BURGER SESSION

--- a/src/components/Burger/Burger.module.css
+++ b/src/components/Burger/Burger.module.css
@@ -10,7 +10,7 @@
     margin-top: 0;
     margin-bottom: 0;
     text-align: center;
-    font-size: 25px;
+    font-size: 1.6em;
     color: #F5C662;
     position: relative;
 }
