--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -12,6 +12,12 @@
     text-align: center;
 }
 
+@media (min-width: 768px) {
+    .Contact-subContainer h1 {
+        font-size: 2.5em;
+    }
+}
+
 .Contact-subContainer > p {
     text-align: center;
 }
@@ -20,9 +26,29 @@
     font-weight: bold;
 }
 
+@media (min-width: 768px) {
+    .Contact-subContainer p {
+        font-size: 1.3em;
+    }
+}
+
 .Contact-header {
     width: 80%;
     margin-left: 10%;
+}
+
+@media (min-width: 480px) {
+    .Contact-header {
+        width: 62%;
+        margin-left: 19%;
+    }
+}
+
+@media (min-width: 768px) {
+    .Contact-header {
+        width: 50%;
+        margin-left: 25%;
+    }
 }
 
 .Contact-header div {
