--- a/src/components/SobreNos/SobreNos.module.css
+++ b/src/components/SobreNos/SobreNos.module.css
@@ -16,6 +16,6 @@
     margin-bottom: 0;
     padding-bottom: 10px;
     text-align: center;
-    font-size: 20px;
+    font-size: 1.25em;
     font-style: italic;
 }
