--- a/src/containers/Header/Header.module.css
+++ b/src/containers/Header/Header.module.css
@@ -3,10 +3,22 @@
     background: url('../../assets/images/header_mobile.jpg') 50% 0/ cover no-repeat;
 }
 
+@media (min-width: 480px) {
+    .Header-container {
+        background: url('../../assets/images/header_mobile.jpg') 50% 70% / cover no-repeat;
+    }
+}
+
 .Header-title {
     color: #991C1E;
     text-align: center;
     font-size: 1.8rem;
+}
+
+@media (min-width: 768px) {
+    .Header-title {
+        font-size: 2.8rem;
+    }
 }
 
 .Header-title span {
