--- a/src/components/ReviewsComponent/ReviewsComponent.module.css
+++ b/src/components/ReviewsComponent/ReviewsComponent.module.css
@@ -22,6 +22,12 @@
     }
 }
 
+@media (min-width: 768px) {
+    .Review-container {
+        font-size: 1.6em;
+    }
+}
+
 .Review-container p {
     margin: 0;
     font-style: italic;
