--- a/src/components/SobreNos/SobreNos.module.css
+++ b/src/components/SobreNos/SobreNos.module.css
@@ -4,10 +4,22 @@
     height: auto;
 }
 
+@media (min-width: 768px) {
+    .SobreNos-container {
+        height: 45vh;
+    }
+}
+
 .SobreNos-container > h1 {
     margin-top: 0;
     padding-top: 10px;
     text-align: center;
+}
+
+@media (min-width: 768px) {
+    .SobreNos-container > h1 {
+        padding-top: 25px;
+    }
 }
 
 .SobreNos-container > p {
