--- a/src/containers/Header/Header.module.css
+++ b/src/containers/Header/Header.module.css
@@ -9,10 +9,23 @@
     }
 }
 
+@media (min-width: 768px) {
+    .Header-container {
+        height: 80vh;
+    }
+}
+
 .Header-title {
     color: #991C1E;
     text-align: center;
     font-size: 1.8rem;
+}
+
+@media (min-width: 480px) {
+    .Header-title {
+        font-size: 2.2rem;
+        margin-top: 0;
+    }
 }
 
 @media (min-width: 768px) {
