--- a/src/containers/Menu/Menu.module.css
+++ b/src/containers/Menu/Menu.module.css
@@ -1,5 +1,6 @@
 .Menu-container {
-    background: url('../../assets/images/menu_bg.jpg') 50% 0 / cover no-repeat;
+    /* background: url('../../assets/images/menu_bg.jpg') 50% 0 / cover no-repeat; */
+    background-color: #3E2113;
     height: 50vh;
     overflow: hidden;
 }
