--- a/src/components/Navigation/Logo/Logo.module.css
+++ b/src/components/Navigation/Logo/Logo.module.css
@@ -1,10 +1,14 @@
 .Logo {
     color: #991C1E;
+    
+}
+
+.Logo > h2 {
     margin: 0 10px;
 }
 
 @media (min-width: 768px) {
-    .Logo {
+    .Logo > h2 {
         font-size: 2.3em;
     }
 }
