--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -5,3 +5,13 @@
     justify-content: center;
     /* position: relative; */
 }
+
+@media (min-width: 1200px) {
+    .Navigation-container {
+        position: absolute;
+        top: 20px;
+        width: 94%;
+        margin-left: 3%;
+        justify-content: space-between;
+    }
+}
