--- a/src/components/SobreNos/SobreNos.module.css
+++ b/src/components/SobreNos/SobreNos.module.css
@@ -10,6 +10,13 @@
     }
 }
 
+@media (min-width: 992px) {
+    .SobreNos-container {
+        background-color: #991C1E;
+        height: auto;
+    }
+}
+
 .SobreNos-container > h1 {
     margin-top: 0;
     padding-top: 10px;
@@ -22,6 +29,12 @@
     }
 }
 
+@media (min-width: 992px) {
+    .SobreNos-container > h1 {
+        padding-top: 60px;
+    }
+}
+
 .SobreNos-container > p {
     margin-right: 5px;
     margin-left: 5px;
@@ -30,4 +43,16 @@
     text-align: center;
     font-size: 1.25em;
     font-style: italic;
+}
+
+.SobreNos-container > img {
+    max-width: 70%;
+    margin: 40px 15% 80px 15%;
+    display: none;
+}
+
+@media (min-width: 992px) {
+    .SobreNos-container > img {
+        display: inline;
+    }
 }
