--- a/src/containers/Header/Header.module.css
+++ b/src/containers/Header/Header.module.css
@@ -15,6 +15,14 @@
     }
 }
 
+@media (min-width: 1200px) {
+    .Header-container {
+        height: 90vh;
+        background: url('../../assets/images/header_bg.jpg') 50% 70% / cover no-repeat;
+        position: relative;
+    }
+}
+
 .Header-title {
     color: #991C1E;
     text-align: center;
@@ -34,6 +42,32 @@
     }
 }
 
+@media (min-width: 1200px) {
+    .Header-title {
+        position: absolute;
+        top: 20%;
+        left: 0;
+        right: 0;
+    }
+}
+
 .Header-title span {
     color: #F5C662;
+}
+
+.Header-container > p {
+    display: none;
+    color: #fff;
+    position: absolute;
+    top: 28%;
+    left: 0;
+    right: 0;
+    text-align: center;
+    font-size: 1.2em;
+}
+
+@media (min-width: 1200px) {
+    .Header-container > p {
+        display: block;
+    }
 }
