Sessão Reviews > 1200px - FINALIZADO

--- a/src/components/ReviewsComponent/ReviewsComponent.module.css
+++ b/src/components/ReviewsComponent/ReviewsComponent.module.css
@@ -9,6 +9,13 @@
     -o-transition: 0.5s;
 }
 
+@media (min-width: 1200px) {
+    .Reviews-container {
+        position: absolute;
+        top: 30px;
+    }
+}
+
 .Review-container {
     margin: 0 20px;
     color: white;
@@ -28,6 +35,25 @@
     }
 }
 
+@media (min-width: 1200px) {
+    .Review-container {
+        font-size: 1.2em;
+        text-align: center;
+    }
+}
+
+.Review-container img {
+    display: none;
+    width: 35%;
+    margin-bottom: 15px;
+}
+
+@media (min-width:1200px) {
+    .Review-container img {
+        display: inline;
+    }
+}
+
 .Review-container p {
     margin: 0;
     font-style: italic;
@@ -36,4 +62,22 @@
 .Review-container strong {
     display: inline-block;
     margin-top: 20px;
+}
+
+.Reviews-arrows--container {
+    display: none;
+    justify-content: space-between;
+    width: 96%;
+    margin-left: 2%;
+    position: absolute;
+    bottom: 25px;
+    cursor: pointer;
+    color: #fff;
+}
+
+@media (min-width:1200px) {
+    .Reviews-arrows--container {
+        display: flex;
+    }
+    
 }
