--- a/src/components/UI/SliderMarkerComponent/SliderMarkerComponent.module.css
+++ b/src/components/UI/SliderMarkerComponent/SliderMarkerComponent.module.css
@@ -3,6 +3,13 @@
     justify-content: center;
 }
 
+@media (min-width:1200px) {
+    .SliderMarkers-container {
+        position: absolute;
+        bottom: 0;
+    }
+}
+
 .SliderMarkers-container > div {
     display: flex;
     align-items: center;
@@ -12,11 +19,16 @@
 .SliderMarkers-marker {
     width: 10px;
     height: 10px;
-    /* background-color: #fff; */
-
+    
     border-radius: 50%;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     -ms-border-radius: 50%;
     -o-border-radius: 50%;
+
+    transition: 0.3s;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -o-transition: 0.3s;
 }
