--- a/src/components/MenuComponent/MenuComponent.module.css
+++ b/src/components/MenuComponent/MenuComponent.module.css
@@ -1,3 +1,9 @@
+@media (min-width: 1200px) {
+    .Menu-subContainer {
+        margin-top: 50px;
+    }
+}
+
 .Menu-header {
     color: #F5C662;
     display: flex;
@@ -10,14 +16,48 @@
     -o-transition: 1s ease-in-out;
 }
 
-.Menu-header > div {
+@media (min-width:1200px) {
+    .Menu-header {
+        margin-left: 20%;
+    }
+}
+
+.Header-item {
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
+    position: relative;
 }
 
-.Menu-header > div > h2 {
+@media (min-width:1200px) {
+    .Header-item {
+        align-items: baseline;
+    }
+
+    .Header-item:first-of-type {
+        color: #991C1E;
+    }
+
+    .Header-item:first-of-type > svg {
+        transform: translateY(2px);
+        -webkit-transform: translateY(2px);
+        -moz-transform: translateY(2px);
+        -ms-transform: translateY(2px);
+        -o-transform: translateY(2px);
+    }
+
+    .Header-item::after {
+        content: "";
+        height: 4px;
+        width: 100%;
+        background-color: #F5C662;
+        position: absolute;
+        bottom: 10px;
+    }
+}
+
+.Header-item > h2 {
     border-bottom: 0;
     margin-left: 10px;
 }
