--- a/src/components/ReviewsComponent/ReviewsComponent.module.css
+++ b/src/components/ReviewsComponent/ReviewsComponent.module.css
@@ -64,7 +64,7 @@
     margin-top: 20px;
 }
 
-.Reviews-arrows--container {
+/* .Reviews-arrows--container {
     display: none;
     justify-content: space-between;
     width: 96%;
@@ -80,4 +80,4 @@
         display: flex;
     }
     
-}
+} */
