--- a/src/components/MenuComponent/MenuComponent.module.css
+++ b/src/components/MenuComponent/MenuComponent.module.css
@@ -1,6 +1,7 @@
 @media (min-width: 1200px) {
     .Menu-subContainer {
         margin-top: 50px;
+        position: relative;
     }
 }
 
@@ -28,16 +29,19 @@
     justify-content: center;
     width: 100%;
     position: relative;
+    cursor: pointer;
 }
 
 @media (min-width:1200px) {
     .Header-item {
         align-items: baseline;
-    }
 
-    .Header-item:first-of-type {
-        color: #991C1E;
-    }
+        transition: 0.3s;
+        -webkit-transition: 0.3s;
+        -moz-transition: 0.3s;
+        -ms-transition: 0.3s;
+        -o-transition: 0.3s;
+}
 
     .Header-item:first-of-type > svg {
         transform: translateY(2px);
@@ -52,6 +56,25 @@
         height: 4px;
         width: 100%;
         background-color: #F5C662;
+        position: absolute;
+        bottom: 10px;
+        
+        transition: 0.2s;
+        -webkit-transition: 0.2s;
+        -moz-transition: 0.2s;
+        -ms-transition: 0.2s;
+        -o-transition: 0.2s;
+}
+
+    .Header-item-alt {
+        color: #991C1E;
+    }
+
+    .Header-item-alt::after {
+        content: "";
+        height: 4px;
+        width: 100%;
+        background-color: #991C1E;
         position: absolute;
         bottom: 10px;
     }
