--- a/src/components/Navigation/MenuNavigation/MenuNavigation.module.css
+++ b/src/components/Navigation/MenuNavigation/MenuNavigation.module.css
@@ -17,6 +17,12 @@
     width: 80%;
 }
 
+@media (min-width: 1578px) {
+    .Navigation-title {
+        font-size: 1.2em;
+    }
+}
+
 .Navigation-title p {
     margin: 0;
     font-weight: bold;
@@ -34,4 +40,10 @@
     justify-content: space-between;
     width: 15%;
     color: #991C1E;
+}
+
+@media (min-width: 1578px) {
+    .Navigation-icons > svg {
+        font-size: 2.5em;
+    }
 }
