--- a/src/components/SobreNos/SobreNos.module.css
+++ b/src/components/SobreNos/SobreNos.module.css
@@ -35,6 +35,12 @@
     }
 }
 
+@media (min-width: 992px) {
+    .SobreNos-container > h1 {
+        font-size: 3em;
+    }
+}
+
 .SobreNos-container > p {
     margin-right: 5px;
     margin-left: 5px;
@@ -43,6 +49,12 @@
     text-align: center;
     font-size: 1.25em;
     font-style: italic;
+}
+
+@media (min-width: 992px) {
+    .SobreNos-container > p {
+        font-size: 1.7em;
+    }
 }
 
 .SobreNos-container > img {
