--- a/src/containers/CustomerReviews/CustomerReviews.module.css
+++ b/src/containers/CustomerReviews/CustomerReviews.module.css
@@ -11,6 +11,12 @@
     }
 }
 
+@media (min-width:1578px) {
+    .Reviews-section {
+        height: 70vh;
+    }
+}
+
 .Reviews-section--container {
     height: 80%;
     display: flex;
