--- a/src/components/SobreNos/SobreNos.module.css
+++ b/src/components/SobreNos/SobreNos.module.css
@@ -17,6 +17,12 @@
     }
 }
 
+/* @media (min-width: 768px) {
+    .SobreNos-container {
+        height: 100vh;
+    }
+} */
+
 .SobreNos-container > h1 {
     margin-top: 0;
     padding-top: 10px;
@@ -41,6 +47,12 @@
     }
 }
 
+@media (min-width: 1578px) {
+    .SobreNos-container > h1 {
+        padding-top: 30px;
+    }
+}
+
 .SobreNos-container > p {
     margin-right: 5px;
     margin-left: 5px;
@@ -53,7 +65,7 @@
 
 @media (min-width: 992px) {
     .SobreNos-container > p {
-        font-size: 1.7em;
+        font-size: 1.5em;
     }
 }
 
@@ -66,5 +78,12 @@
 @media (min-width: 992px) {
     .SobreNos-container > img {
         display: inline;
+    }
+}
+
+@media (min-width: 1578px) {
+    .SobreNos-container > img {
+        max-width: 60%;
+        margin: 40px 20% 60px 20%;
     }
 }
