--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,17 +1,26 @@
 .Navigation-container {
-    height: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
-    /* position: relative; */
 }
 
 @media (min-width: 1200px) {
     .Navigation-container {
         position: fixed;
-        top: 20px;
         width: 94%;
-        margin-left: 3%;
+        width: 100%;
         justify-content: space-between;
+        z-index: 9999;
+
+        transition: 0.3s;
+        -webkit-transition: 0.3s;
+        -moz-transition: 0.3s;
+        -ms-transition: 0.3s;
+        -o-transition: 0.3s;
+}
+
+    /*Essas div children são os componentes Logo e MenuNavigation*/
+    .Navigation-container  > div {
+        padding: 10px 20px;
     }
 }
