Inicío da configuração da passagem de slides com touch

--- a/src/components/ReviewsComponent/ReviewsComponent.module.css
+++ b/src/components/ReviewsComponent/ReviewsComponent.module.css
@@ -1,6 +1,7 @@
 .Reviews-container {
     display: flex;
     justify-content: space-between;
+    touch-action: none;
     
     transition: 0.5s;
     -webkit-transition: 0.5s;
