--- a/src/components/MenuComponent/MenuComponent.module.css
+++ b/src/components/MenuComponent/MenuComponent.module.css
@@ -11,6 +11,7 @@
     justify-content: space-between;
     background-color: rgba(204, 204, 204, 0.116);
     height: 50px;
+    width: 60%;
     margin-bottom: 20px;
     margin-top: 20px;
     touch-action: none;
