--- a/src/containers/Menu/Menu.module.css
+++ b/src/containers/Menu/Menu.module.css
@@ -24,7 +24,7 @@
 
 @media (min-width:1200px) {
     .Menu-container > h1 {
-        margin-top: 50px;
+        padding-top: 73px;
     }
 
     .Menu-container > h1:after {
